--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ button{
 button:hover{
   filter: brightness(120%);
 }
-input[type="text"], input[type="number"], input[type="password"], textarea{
+input[type="text"],input[type="date"], input[type="number"], input[type="password"], textarea{
   padding: 10px;
   border-radius: 5px;
   border: solid 1px #aaa;
