--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -14,6 +14,10 @@
     border-radius: 15px;
     transition: 0.5s;
 }
+#modal::backdrop{
+    filter: blur(10px);
+    background-color: black;
+}
 #modal > input{
     color: #06f;
     font-size: 40px;
